# back-end/src/routes/index.ts
@@ -1,6 +1,7 @@
 import { IRoute } from "@infra"
 import { createAboutMe, getAboutMe } from "./about-me"
 import { createNewProject, deleteProjectPerId, getProjectPaginate } from "./projects"
+import { createNewPost, getPostPaginate, getPostPerId, updatePostPerId } from "./posts"
 
 const index = "/"
 
@@ -35,8 +36,33 @@ const AllRoutes: Array<IRoute> = [
       },
       {
         type: "delete",
-        path: "/delete/:id",
+        path: "/:id",
         route: deleteProjectPerId,
+      },
+    ],
+  },
+  {
+    path: "/posts",
+    childs: [
+      {
+        type: "get",
+        path: "/:id",
+        route: getPostPerId,
+      },
+      {
+        type: "get",
+        path: "/paginate",
+        route: getPostPaginate,
+      },
+      {
+        type: "post",
+        path: "/create/post",
+        route: createNewPost,
+      },
+      {
+        type: "put",
+        path: "/update/post",
+        route: updatePostPerId,
       },
     ],
   },
