# back-end/src/swagger/schemas/index.ts
@@ -3,5 +3,6 @@ import SchemaAboutMe from "./about-me"
 import SchemaProject from "./project"
 import SchemaProjectList from "./project-list"
 import SchemaPost from "./post"
+import SchemaPostsList from "./posts-list"
 
-export { SchemaError, SchemaAboutMe, SchemaProject, SchemaProjectList, SchemaPost }
+export { SchemaError, SchemaAboutMe, SchemaProject, SchemaProjectList, SchemaPost, SchemaPostsList }
