# back-end/src/swagger/schemas/posts-list.ts
@@ -1,0 +1,19 @@
+import { CreateSchema } from "@swagger"
+
+export default CreateSchema({
+  type: "object",
+  properties: {
+    page: {
+      type: "number",
+      example: 1,
+    },
+    quantity_items: {
+      type: "number",
+      example: 1000,
+    },
+    posts: {
+      type: "array",
+      example: [],
+    },
+  },
+})
