# back-end/swagger-output.json
@@ -74,7 +74,7 @@
         }
       }
     },
-    "/about-me/create-about-me": {
+    "/about-me/create/about-me": {
       "post": {
         "tags": [
           "About-me"
@@ -178,126 +178,6 @@
         }
       }
     },
-    "/projects/create-project": {
-      "post": {
-        "tags": [
-          "Projects"
-        ],
-        "description": "This router is create new projects in portifolio",
-        "responses": {
-          "200": {
-            "description": "success in create project"
-          },
-          "400": {
-            "description": "error in create project",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/SchemaError"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "error in server",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/SchemaError"
-                }
-              }
-            }
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "description": "Infos the project",
-              "schema": {
-                "$ref": "#/components/schemas/SchemaProject"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/projects/delete/:id": {
-      "delete": {
-        "tags": [
-          "Projects"
-        ],
-        "description": "Delete project per id",
-        "responses": {
-          "200": {
-            "description": "Success in delete project"
-          },
-          "400": {
-            "description": "error in delete project",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/SchemaError"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "error in server",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/SchemaError"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/about-me/create/about-me": {
-      "post": {
-        "tags": [
-          "About-me"
-        ],
-        "description": "Create about-me infos",
-        "responses": {
-          "200": {
-            "description": "success in create about-me"
-          },
-          "400": {
-            "description": "error in craete about-me",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/SchemaError"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "error in server",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/SchemaError"
-                }
-              }
-            }
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "description": "About-me info",
-              "type": "object",
-              "schema": {
-                "$ref": "#/components/schemas/SchemaAboutMe"
-              }
-            }
-          }
-        }
-      }
-    },
     "/projects/create/project": {
       "post": {
         "tags": [
@@ -335,6 +215,190 @@
               "description": "Infos the project",
               "schema": {
                 "$ref": "#/components/schemas/SchemaProject"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/projects/:id": {
+      "delete": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Delete project per id",
+        "responses": {
+          "200": {
+            "description": "Success in delete project"
+          },
+          "400": {
+            "description": "error in delete project",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SchemaError"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "error in server",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SchemaError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/posts/:id": {
+      "get": {
+        "tags": [
+          "Posts"
+        ],
+        "description": "Get post per id",
+        "parameters": [
+          {
+            "in": "path",
+            "required": true,
+            "name": "id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success in get post",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SchemaPost"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "error in listing the posts",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SchemaError"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "error in server",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SchemaError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/posts/paginate": {
+      "get": {
+        "tags": [
+          "Posts"
+        ],
+        "description": "Get all posts per page",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "type": "string",
+            "required": true
+          },
+          {
+            "in": "query",
+            "name": "amount",
+            "type": "string",
+            "required": true
+          },
+          {
+            "in": "query",
+            "name": "type",
+            "type": "string",
+            "required": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success in listing the posts",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SchemaPostsList"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "error in listing the posts",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SchemaError"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "error in server",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SchemaError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/posts/create/new-post": {
+      "post": {
+        "tags": [
+          "Posts"
+        ],
+        "description": "Create new post",
+        "responses": {
+          "200": {
+            "description": "Success in created post"
+          },
+          "400": {
+            "description": "error in craete post",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SchemaError"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "error in server",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SchemaError"
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "description": "Post",
+              "type": "object",
+              "schema": {
+                "$ref": "#/components/schemas/SchemaPost"
               }
             }
           }
@@ -429,6 +493,48 @@
             "example": 1000
           },
           "projects": {
+            "type": "array",
+            "example": []
+          }
+        }
+      },
+      "SchemaPost": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "example": "string"
+          },
+          "img": {
+            "type": "string",
+            "example": "string"
+          },
+          "description": {
+            "type": "string",
+            "example": "string"
+          },
+          "tags": {
+            "type": "array",
+            "example": []
+          },
+          "content": {
+            "type": "string",
+            "example": "string"
+          }
+        }
+      },
+      "SchemaPostsList": {
+        "type": "object",
+        "properties": {
+          "page": {
+            "type": "number",
+            "example": 1
+          },
+          "quantity_items": {
+            "type": "number",
+            "example": 1000
+          },
+          "posts": {
             "type": "array",
             "example": []
           }
